remove width of .page on mobile as an attempt to fix an issue on mobile since I added the viewport meta tag

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ li{
 	}
 
 	.page{
-		width: 90%;
+		/*width: 90%;*/
 		left: 0;
 		margin: auto;
 	}
